--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy.yml
 name: Deploy Static Site
 
 on:
@@ -6,6 +5,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
+permissions:
+  contents: write
 
 jobs:
   deploy:
@@ -23,11 +25,9 @@ jobs:
     - name: Install dependencies
       run: |
         npm install -g html-minifier-terser
-        # Add any other build tools you need
     
     - name: Replace environment variables
       run: |
-        # Replace placeholders in HTML with actual values from secrets
         sed -i "s/YOUR_PUBLIC_KEY/${{ secrets.EMAILJS_PUBLIC_KEY }}/g" index.html
         sed -i "s/YOUR_SERVICE_ID/${{ secrets.EMAILJS_SERVICE_ID }}/g" index.html
         sed -i "s/YOUR_TEMPLATE_ID/${{ secrets.EMAILJS_TEMPLATE_ID }}/g" index.html
@@ -38,7 +38,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./
-        # This preserves your custom domain setting
         cname: easydoesit.ca
-        # Exclude source files if needed
         exclude_assets: '.github,README.md,*.md'
