--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,5 +54,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./
-        cname: easydoesit.ca
+        cname: www.easydoesit.ca
         exclude_assets: '.github,README.md,*.md'
