--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
       "title": "Professional IT Support You Can Trust",
       "description": "Expert IT support for individuals and small businesses. From hardware procurement to training and maintenance, we provide reliable IT support you can trust.",
       "features": [
+        "Website Design & Hosting",
         "Hardware Procurement & Installation",
         "User Training & Support",
-        "System Maintenance & Care",
-        "Professional IT Consultation"
+        "System Maintenance & Care"
       ],
       "formTitle": "Get Your Free Quote",
       "formSubtitle": "Tell us about your IT needs and we'll provide personalized recommendations"
@@ -31,18 +31,18 @@
         {
             "icon": "🌐",
             "title": "Website Design & Hosting",
-            "description": "Professional website design and reliable hosting solutions to establish your online presence. We create beautiful, functional websites that work for your business.",
+            "description": "",
             "features": [
-              "Custom website design and development",
-              "Responsive mobile-friendly layouts",
-              "Secure and fast hosting services",
-              "Domain registration and email setup"
+                "Fully custom website design and development",
+                "Responsive, mobile-friendly layouts",
+                "Custom domain registration and business email setup",
+                "Google Analytics integration and performance tracking"
             ]
-          },
+            },
           {
             "icon": "🛒",
             "title": "Hardware Procurement",
-            "description": "Get expert advice on choosing the right technology for your needs and budget. We help you navigate the overwhelming world of tech purchasing with confidence.",
+            "description": "",
             "features": [
               "Needs assessment and requirements analysis",
               "Budget-friendly hardware recommendations",
@@ -53,7 +53,7 @@
           {
             "icon": "⚙️",
             "title": "Installation & Maintenance",
-            "description": "Professional installation of hardware and software systems, plus ongoing maintenance to keep everything running smoothly. From initial setup to long-term care.",
+            "description": "",
             "features": [
               "Computer and device setup",
               "Software installation and configuration",
@@ -64,7 +64,7 @@
           {
             "icon": "🎓",
             "title": "User Training & Support",
-            "description": "Learn to use your technology confidently with personalized training sessions tailored to your skill level and specific needs.",
+            "description": "",
             "features": [
               "One-on-one training sessions",
               "Software and system tutorials",
@@ -75,7 +75,7 @@
           {
             "icon": "💡",
             "title": "Professional Consultation",
-            "description": "Strategic IT guidance for making informed technology decisions. Get expert advice on technology investments and digital transformation.",
+            "description": "",
             "features": [
               "Technology planning and strategy",
               "System architecture recommendations",
@@ -86,7 +86,7 @@
           {
             "icon": "🏠",
             "title": "Home Office Solutions",
-            "description": "Complete home office setup services for remote workers, freelancers, and small business owners who need reliable technology infrastructure.",
+            "description": "",
             "features": [
               "Home office design and setup",
               "Remote work optimization",
@@ -187,6 +187,10 @@
           "value": "",
           "label": "Select a service..."
         },
+        {
+            "value": "website-design",
+            "label": "Website Design & Hosting"
+          },
         {
           "value": "hardware-procurement",
           "label": "Hardware Procurement & Advice"
